--- a/DoAnTotNghiep_MiniatureCrafts/build.gradle
+++ b/DoAnTotNghiep_MiniatureCrafts/build.gradle
@@ -29,15 +29,23 @@ ext {
 }
 
 dependencies {
+	implementation 'org.springframework.security:spring-security-jwt:1.1.1.RELEASE'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	implementation 'org.apache.xmlbeans:xmlbeans:5.2.1'
+	implementation 'org.apache.poi:poi-ooxml:5.3.0'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.ai:spring-ai-azure-openai-spring-boot-starter'
-	implementation 'org.springframework.ai:spring-ai-vertex-ai-gemini-spring-boot-starter'
-	compileOnly 'org.projectlombok:lombok'
+	implementation 'com.fasterxml.jackson.core:jackson-core:2.17.1'
+	implementation 'com.amazonaws:aws-java-sdk-lambda:1.12.757'
+	implementation 'com.microsoft.sqlserver:mssql-jdbc:12.6.1.jre11'
+	implementation 'org.jfree:jfreechart:1.5.5'
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '3.2.5'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	annotationProcessor 'org.projectlombok:lombok'
+	runtimeOnly 'com.h2database:h2'
+	runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	testImplementation 'org.springframework.security:spring-security-test'
 }
 
 dependencyManagement {
