--- a/DoAnTotNghiep_MiniatureCrafts/build.gradle
+++ b/DoAnTotNghiep_MiniatureCrafts/build.gradle
@@ -42,6 +42,9 @@ dependencies {
 	implementation 'org.jfree:jfreechart:1.5.5'
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '3.2.5'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+	// https://mvnrepository.com/artifact/org.projectlombok/lombok
+	compileOnly 'org.projectlombok:lombok:1.18.24'
+
 	runtimeOnly 'com.h2database:h2'
 	runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
