--- a/DoAnTotNghiep_MiniatureCrafts/build.gradle
+++ b/DoAnTotNghiep_MiniatureCrafts/build.gradle
@@ -47,7 +47,7 @@ dependencies {
     implementation 'com.microsoft.sqlserver:mssql-jdbc:12.6.1.jre11'
 //	implementation 'org.jfree:jfreechart:1.5.5'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '3.2.5'
-    developmentOnly 'org.springframework.boot:spring-boot-devtools'
+//    developmentOnly 'org.springframework.boot:spring-boot-devtools'
     // https://mvnrepository.com/artifact/org.projectlombok/lombok
     compileOnly 'org.projectlombok:lombok:1.18.34'
 
