--- a/DoAnTotNghiep_MiniatureCrafts/build.gradle
+++ b/DoAnTotNghiep_MiniatureCrafts/build.gradle
@@ -45,13 +45,11 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-core:2.17.1'
     implementation 'com.amazonaws:aws-java-sdk-lambda:1.12.757'
     implementation 'com.microsoft.sqlserver:mssql-jdbc:12.6.1.jre11'
+    implementation 'org.springframework.hateoas:spring-hateoas:2.3.3'
 //	implementation 'org.jfree:jfreechart:1.5.5'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '3.2.5'
-//    developmentOnly 'org.springframework.boot:spring-boot-devtools'
-    // https://mvnrepository.com/artifact/org.projectlombok/lombok
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
     compileOnly 'org.projectlombok:lombok:1.18.34'
-
-
     runtimeOnly 'com.h2database:h2'
     runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
