--- a/DoAnTotNghiep_MiniatureCrafts/src/main/resources/application.properties
+++ b/DoAnTotNghiep_MiniatureCrafts/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=DoAnTotNghiep_MiniatureCrafts
 
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=HP_29_DoAnTotNghiep;encrypt=true;trustServerCertificate=true
+spring.datasource.url=jdbc:sqlserver://192.168.6.161;databaseName=HP_29_DoAnTotNghiep;encrypt=true;trustServerCertificate=true
 spring.datasource.username=sa
 spring.datasource.password=123456789
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
