--- a/DoAnTotNghiep_MiniatureCrafts/src/main/resources/application.properties
+++ b/DoAnTotNghiep_MiniatureCrafts/src/main/resources/application.properties
@@ -18,3 +18,11 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=30MB
+
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=khanhzxlp909@gmail.com
+spring.mail.password=ardt xqay drly eeuh
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
