--- a/DoAnTotNghiep_MiniatureCrafts/src/main/resources/application.properties
+++ b/DoAnTotNghiep_MiniatureCrafts/src/main/resources/application.properties
@@ -26,3 +26,9 @@ spring.mail.username=khanhzxlp909@gmail.com
 spring.mail.password=ardt xqay drly eeuh
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+
+vnpay.tmnCode=2QXUI4J4
+vnpay.hashSecret=SECRETKEY123456789
+vnpay.url = https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
+vnpay.returnUrl=http://localhost:8080/api/vnpay/callback
