--- a/DoAnTotNghiep_MiniatureCrafts/build.gradle
+++ b/DoAnTotNghiep_MiniatureCrafts/build.gradle
@@ -67,7 +67,8 @@ dependencies {
 // Testing
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
-
+    // sanbox vnpay(client)
+    implementation 'org.apache.httpcomponents.client5:httpclient5:5.2'
 }
 
 dependencyManagement {
