--- a/DATN_HP_29/DoAnTotNghiep_MiniatureCrafts/src/main/resources/application.properties
+++ b/DATN_HP_29/DoAnTotNghiep_MiniatureCrafts/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=DoAnTotNghiep_MiniatureCrafts
 
 spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=HP_29_DoAnTotNghiep;encrypt=true;trustServerCertificate=true
 spring.datasource.username=sa
-spring.datasource.password=123
+spring.datasource.password=123456789
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
 
