--- a/Admin_Page_HP29_vuejs/package.json
+++ b/Admin_Page_HP29_vuejs/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.7.9",
     "boxicons": "^2.1.4",
+    "chart.js": "^4.5.0",
     "dayjs": "^1.11.13",
     "font-awesome": "^4.7.0",
     "js-cookie": "^3.0.5",
